Assembler/.antlr/romASMParser.cpp

// Generated from romASMParser.g4 by ANTLR 4.13.2


#include "romASMParserListener.h"
#include "romASMParserVisitor.h"

#include "romASMParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct RomASMParserStaticData final {
  RomASMParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  RomASMParserStaticData(const RomASMParserStaticData&) = delete;
  RomASMParserStaticData(RomASMParserStaticData&&) = delete;
  RomASMParserStaticData& operator=(const RomASMParserStaticData&) = delete;
  RomASMParserStaticData& operator=(RomASMParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag romasmparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<RomASMParserStaticData> romasmparserParserStaticData = nullptr;

void romasmparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (romasmparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(romasmparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<RomASMParserStaticData>(
    std::vector<std::string>{
      "program", "expr"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "','"
    },
    std::vector<std::string>{
      "", "MOV", "STR", "LDA", "OR", "INV", "AND", "XOR", "ADD", "SUB", 
      "NOT", "SHR", "SHL", "PUSH", "CALL", "POP", "RET", "JMP", "JEZ", "JNZ", 
      "JGZ", "JLZ", "COMMA", "COMMENT", "IMM", "HEX", "REG", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  romasmparserParserStaticData = std::move(staticData);
}

}

romASMParser::romASMParser(TokenStream *input) : romASMParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

romASMParser::romASMParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  romASMParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *romasmparserParserStaticData->atn, romasmparserParserStaticData->decisionToDFA, romasmparserParserStaticData->sharedContextCache, options);
}

romASMParser::~romASMParser() {
  delete _interpreter;
}

const atn::ATN& romASMParser::getATN() const {
  return *romasmparserParserStaticData->atn;
}

std::string romASMParser::getGrammarFileName() const {
  return "romASMParser.g4";
}

const std::vector<std::string>& romASMParser::getRuleNames() const {
  return romasmparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& romASMParser::getVocabulary() const {
  return romasmparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView romASMParser::getSerializedATN() const {
  return romasmparserParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

romASMParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* romASMParser::ProgramContext::EOF() {
  return getToken(romASMParser::EOF, 0);
}

std::vector<romASMParser::ExprContext *> romASMParser::ProgramContext::expr() {
  return getRuleContexts<romASMParser::ExprContext>();
}

romASMParser::ExprContext* romASMParser::ProgramContext::expr(size_t i) {
  return getRuleContext<romASMParser::ExprContext>(i);
}


size_t romASMParser::ProgramContext::getRuleIndex() const {
  return romASMParser::RuleProgram;
}

void romASMParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<romASMParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void romASMParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<romASMParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any romASMParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<romASMParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

romASMParser::ProgramContext* romASMParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, romASMParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(7);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 12582910) != 0)) {
      setState(4);
      expr();
      setState(9);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(10);
    match(romASMParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

romASMParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* romASMParser::ExprContext::MOV() {
  return getToken(romASMParser::MOV, 0);
}

std::vector<tree::TerminalNode *> romASMParser::ExprContext::REG() {
  return getTokens(romASMParser::REG);
}

tree::TerminalNode* romASMParser::ExprContext::REG(size_t i) {
  return getToken(romASMParser::REG, i);
}

std::vector<tree::TerminalNode *> romASMParser::ExprContext::COMMA() {
  return getTokens(romASMParser::COMMA);
}

tree::TerminalNode* romASMParser::ExprContext::COMMA(size_t i) {
  return getToken(romASMParser::COMMA, i);
}

tree::TerminalNode* romASMParser::ExprContext::IMM() {
  return getToken(romASMParser::IMM, 0);
}

tree::TerminalNode* romASMParser::ExprContext::HEX() {
  return getToken(romASMParser::HEX, 0);
}

tree::TerminalNode* romASMParser::ExprContext::STR() {
  return getToken(romASMParser::STR, 0);
}

tree::TerminalNode* romASMParser::ExprContext::LDA() {
  return getToken(romASMParser::LDA, 0);
}

tree::TerminalNode* romASMParser::ExprContext::OR() {
  return getToken(romASMParser::OR, 0);
}

tree::TerminalNode* romASMParser::ExprContext::INV() {
  return getToken(romASMParser::INV, 0);
}

tree::TerminalNode* romASMParser::ExprContext::AND() {
  return getToken(romASMParser::AND, 0);
}

tree::TerminalNode* romASMParser::ExprContext::XOR() {
  return getToken(romASMParser::XOR, 0);
}

tree::TerminalNode* romASMParser::ExprContext::ADD() {
  return getToken(romASMParser::ADD, 0);
}

tree::TerminalNode* romASMParser::ExprContext::SUB() {
  return getToken(romASMParser::SUB, 0);
}

tree::TerminalNode* romASMParser::ExprContext::NOT() {
  return getToken(romASMParser::NOT, 0);
}

tree::TerminalNode* romASMParser::ExprContext::SHR() {
  return getToken(romASMParser::SHR, 0);
}

tree::TerminalNode* romASMParser::ExprContext::SHL() {
  return getToken(romASMParser::SHL, 0);
}

tree::TerminalNode* romASMParser::ExprContext::PUSH() {
  return getToken(romASMParser::PUSH, 0);
}

tree::TerminalNode* romASMParser::ExprContext::CALL() {
  return getToken(romASMParser::CALL, 0);
}

tree::TerminalNode* romASMParser::ExprContext::POP() {
  return getToken(romASMParser::POP, 0);
}

tree::TerminalNode* romASMParser::ExprContext::RET() {
  return getToken(romASMParser::RET, 0);
}

tree::TerminalNode* romASMParser::ExprContext::JMP() {
  return getToken(romASMParser::JMP, 0);
}

tree::TerminalNode* romASMParser::ExprContext::JEZ() {
  return getToken(romASMParser::JEZ, 0);
}

tree::TerminalNode* romASMParser::ExprContext::JNZ() {
  return getToken(romASMParser::JNZ, 0);
}

tree::TerminalNode* romASMParser::ExprContext::JGZ() {
  return getToken(romASMParser::JGZ, 0);
}

tree::TerminalNode* romASMParser::ExprContext::JLZ() {
  return getToken(romASMParser::JLZ, 0);
}

tree::TerminalNode* romASMParser::ExprContext::COMMENT() {
  return getToken(romASMParser::COMMENT, 0);
}


size_t romASMParser::ExprContext::getRuleIndex() const {
  return romASMParser::RuleExpr;
}

void romASMParser::ExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<romASMParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpr(this);
}

void romASMParser::ExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<romASMParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpr(this);
}


std::any romASMParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<romASMParserVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}

romASMParser::ExprContext* romASMParser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 2, romASMParser::RuleExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(168);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 33, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(12);
      match(romASMParser::MOV);
      setState(13);
      match(romASMParser::REG);
      setState(15);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA) {
        setState(14);
        match(romASMParser::COMMA);
      }
      setState(17);
      match(romASMParser::REG);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(18);
      match(romASMParser::MOV);
      setState(19);
      match(romASMParser::IMM);
      setState(21);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA) {
        setState(20);
        match(romASMParser::COMMA);
      }
      setState(23);
      match(romASMParser::REG);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(24);
      match(romASMParser::MOV);
      setState(25);
      match(romASMParser::HEX);
      setState(27);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA) {
        setState(26);
        match(romASMParser::COMMA);
      }
      setState(29);
      match(romASMParser::REG);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(30);
      match(romASMParser::STR);
      setState(31);
      match(romASMParser::REG);
      setState(33);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA) {
        setState(32);
        match(romASMParser::COMMA);
      }
      setState(35);
      match(romASMParser::REG);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(36);
      match(romASMParser::LDA);
      setState(37);
      match(romASMParser::REG);
      setState(39);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA) {
        setState(38);
        match(romASMParser::COMMA);
      }
      setState(41);
      match(romASMParser::REG);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(42);
      match(romASMParser::OR);
      setState(43);
      match(romASMParser::REG);
      setState(45);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA) {
        setState(44);
        match(romASMParser::COMMA);
      }
      setState(47);
      match(romASMParser::REG);
      setState(52);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA

      || _la == romASMParser::REG) {
        setState(49);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == romASMParser::COMMA) {
          setState(48);
          match(romASMParser::COMMA);
        }
        setState(51);
        match(romASMParser::REG);
      }
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(54);
      match(romASMParser::INV);
      setState(55);
      match(romASMParser::REG);
      setState(60);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA

      || _la == romASMParser::REG) {
        setState(57);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == romASMParser::COMMA) {
          setState(56);
          match(romASMParser::COMMA);
        }
        setState(59);
        match(romASMParser::REG);
      }
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(62);
      match(romASMParser::AND);
      setState(63);
      match(romASMParser::REG);
      setState(65);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA) {
        setState(64);
        match(romASMParser::COMMA);
      }
      setState(67);
      match(romASMParser::REG);
      setState(72);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA

      || _la == romASMParser::REG) {
        setState(69);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == romASMParser::COMMA) {
          setState(68);
          match(romASMParser::COMMA);
        }
        setState(71);
        match(romASMParser::REG);
      }
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(74);
      match(romASMParser::XOR);
      setState(75);
      match(romASMParser::REG);
      setState(77);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA) {
        setState(76);
        match(romASMParser::COMMA);
      }
      setState(79);
      match(romASMParser::REG);
      setState(84);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA

      || _la == romASMParser::REG) {
        setState(81);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == romASMParser::COMMA) {
          setState(80);
          match(romASMParser::COMMA);
        }
        setState(83);
        match(romASMParser::REG);
      }
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(86);
      match(romASMParser::ADD);
      setState(87);
      match(romASMParser::REG);
      setState(89);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA) {
        setState(88);
        match(romASMParser::COMMA);
      }
      setState(91);
      match(romASMParser::REG);
      setState(96);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA

      || _la == romASMParser::REG) {
        setState(93);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == romASMParser::COMMA) {
          setState(92);
          match(romASMParser::COMMA);
        }
        setState(95);
        match(romASMParser::REG);
      }
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(98);
      match(romASMParser::SUB);
      setState(99);
      match(romASMParser::REG);
      setState(101);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA) {
        setState(100);
        match(romASMParser::COMMA);
      }
      setState(103);
      match(romASMParser::REG);
      setState(108);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA

      || _la == romASMParser::REG) {
        setState(105);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == romASMParser::COMMA) {
          setState(104);
          match(romASMParser::COMMA);
        }
        setState(107);
        match(romASMParser::REG);
      }
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(110);
      match(romASMParser::NOT);
      setState(111);
      match(romASMParser::REG);
      setState(116);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA

      || _la == romASMParser::REG) {
        setState(113);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == romASMParser::COMMA) {
          setState(112);
          match(romASMParser::COMMA);
        }
        setState(115);
        match(romASMParser::REG);
      }
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(118);
      match(romASMParser::SHR);
      setState(119);
      match(romASMParser::REG);
      setState(124);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA

      || _la == romASMParser::REG) {
        setState(121);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == romASMParser::COMMA) {
          setState(120);
          match(romASMParser::COMMA);
        }
        setState(123);
        match(romASMParser::REG);
      }
      break;
    }

    case 14: {
      enterOuterAlt(_localctx, 14);
      setState(126);
      match(romASMParser::SHL);
      setState(127);
      match(romASMParser::REG);
      setState(132);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA

      || _la == romASMParser::REG) {
        setState(129);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == romASMParser::COMMA) {
          setState(128);
          match(romASMParser::COMMA);
        }
        setState(131);
        match(romASMParser::REG);
      }
      break;
    }

    case 15: {
      enterOuterAlt(_localctx, 15);
      setState(134);
      match(romASMParser::PUSH);
      setState(135);
      match(romASMParser::REG);
      break;
    }

    case 16: {
      enterOuterAlt(_localctx, 16);
      setState(136);
      match(romASMParser::CALL);
      setState(137);
      match(romASMParser::REG);
      break;
    }

    case 17: {
      enterOuterAlt(_localctx, 17);
      setState(138);
      match(romASMParser::POP);
      setState(139);
      match(romASMParser::REG);
      break;
    }

    case 18: {
      enterOuterAlt(_localctx, 18);
      setState(140);
      match(romASMParser::RET);
      break;
    }

    case 19: {
      enterOuterAlt(_localctx, 19);
      setState(141);
      match(romASMParser::JMP);
      setState(142);
      match(romASMParser::REG);
      break;
    }

    case 20: {
      enterOuterAlt(_localctx, 20);
      setState(143);
      match(romASMParser::JEZ);
      setState(144);
      match(romASMParser::REG);
      setState(146);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA) {
        setState(145);
        match(romASMParser::COMMA);
      }
      setState(148);
      match(romASMParser::REG);
      break;
    }

    case 21: {
      enterOuterAlt(_localctx, 21);
      setState(149);
      match(romASMParser::JNZ);
      setState(150);
      match(romASMParser::REG);
      setState(152);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA) {
        setState(151);
        match(romASMParser::COMMA);
      }
      setState(154);
      match(romASMParser::REG);
      break;
    }

    case 22: {
      enterOuterAlt(_localctx, 22);
      setState(155);
      match(romASMParser::JGZ);
      setState(156);
      match(romASMParser::REG);
      setState(158);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA) {
        setState(157);
        match(romASMParser::COMMA);
      }
      setState(160);
      match(romASMParser::REG);
      break;
    }

    case 23: {
      enterOuterAlt(_localctx, 23);
      setState(161);
      match(romASMParser::JLZ);
      setState(162);
      match(romASMParser::REG);
      setState(164);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == romASMParser::COMMA) {
        setState(163);
        match(romASMParser::COMMA);
      }
      setState(166);
      match(romASMParser::REG);
      break;
    }

    case 24: {
      enterOuterAlt(_localctx, 24);
      setState(167);
      match(romASMParser::COMMENT);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

void romASMParser::initialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  romasmparserParserInitialize();
#else
  ::antlr4::internal::call_once(romasmparserParserOnceFlag, romasmparserParserInitialize);
#endif
}
